Changes DockerCredentialRetriever to use ProcessBuilder.